# information

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
calendar/: requirements.txt  scraper.py  store.py
data/: free_data_survey.md
data/macro_data_layer/: .gitignore  README.md  pyproject.toml
data/macro_data_layer/config/: data_layer.yaml
data/macro_data_layer/src/: __init__.py  data_layer.py  registry.py  storage.py
data/macro_data_layer/src/providers/: __init__.py  base.py  fred.py
data/macro_data_layer/tests/: test_data_layer.py  test_fred_provider.py  test_registry.py  test_storage.py
doc_parser/: .env.example  .gitignore  README.md  pyproject.toml
doc_parser/src/doc_parser/: __init__.py  __main__.py  chart_enhance.py  cli.py  config.py  extraction.py  hasher.py  pipeline.py  storage.py  textin_client.py  watermark.py
doc_parser/src/doc_parser/steps/: __init__.py  step2_parse.py  step3_extract.py
doc_parser/tests/: conftest.py  test_chart_enhance.py  test_cli.py  test_config.py  test_extraction.py  test_hasher.py  test_pipeline.py  test_steps.py  test_storage.py  test_textin_client.py  test_watermark.py
gov_report/: .env.example  macro_crawler_plan.md  pyproject.toml
gov_report/src/gov_report/: __init__.py  __main__.py  cli.py  config.py  converter.py  hasher.py  models.py  pipeline.py  registry.py  rss.py  sync_store.py
gov_report/src/gov_report/fetchers/: __init__.py  base.py  cn_caixin.py  cn_customs.py  cn_mof.py  cn_nbs.py  cn_pboc.py  cn_safe.py  cn_scio.py  eu_ecb.py  eu_eurostat.py  intl_bis.py  intl_imf.py  intl_oecd.py  intl_worldbank.py  jp_boj.py  other_cb.py  uk_boe.py  uk_ons.py  us_bea.py  us_bls.py  us_census.py  us_fed.py  us_ism.py  us_treasury.py  us_umich.py
gov_report/tests/: conftest.py  test_converter.py  test_hasher.py  test_pipeline.py
news/: .env.example  .gitignore  :memory:  Dockerfile  README.md  pyproject.toml  refresher.py
news/config/: news_stream.yaml
news/src/: __init__.py  article_fetcher.py  classifier.py  deduplicator.py  export.py  feed_info.py  news_stream.py  paywall_fetcher.py  paywall_login.py  registry.py  storage.py  sync_store.py  telegram_login.py
news/src/api/: __init__.py  app.py  broadcast.py  filters.py
news/src/common/: __init__.py  base_provider.py  export.py  summarizer.py  sync_store.py
news/src/providers/: __init__.py  rss.py  telegram.py  telegram_realtime.py
news/src/rss/: __init__.py  feeds.py  paywall_login.py  provider.py
news/src/telegram/: __init__.py  feeds.py  login.py  provider.py  realtime.py
news/tests/: test_api.py  test_broadcast.py  test_classifier.py  test_deduplicator.py  test_export.py  test_news_stream.py  test_realtime_integration.py  test_registry.py  test_rss_provider.py  test_storage.py  test_sync_store.py  test_telegram_realtime.py
widgets/: catalog.py  news_stream.html  test_catalog.py
