[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "analyst-widgets"
version = "0.1.0"
description = "Shared utilities for the analyst information layer"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["widgets"]

[tool.pytest.ini_options]
testpaths = ["widgets"]
