[project]
name = "news-stream"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "feedparser>=6.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "pydantic-settings>=2.0",
    "readability-lxml>=0.8",
    "markdownify>=0.12",
]

[project.optional-dependencies]
playwright = ["playwright>=1.40"]
dev = ["pytest>=7.0", "respx>=0.21"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
